--- a/ev.ipynb
+++ b/ev.ipynb
@@ -11,106 +11,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 1,
    "id": "22599d56-dbe0-4895-8680-52b190abbc64",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Packages\n",
-    "from gurobipy import Model, GRB, quicksum, min_\n",
+    "from gurobipy import Model, GRB, quicksum\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import folium\n",
-    "from geopy.geocoders import Nominatim\n",
-    "import math"
+    "import math\n",
+    "from folium.plugins import HeatMap\n",
+    "\n",
+    "# from geopy.geocoders import Nominatim\n",
+    "# import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 2,
    "id": "2a042c5d-f8e4-42a4-a10d-e6707c64eb98",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('Electric_Vehicle_Population_Data.csv')"
+    "df = pd.read_csv('Electric_Vehicle_Population_Data.csv') #dataframe for ev population"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 3,
    "id": "7045f297-a1f9-483b-96f0-418c30d82080",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "421"
-      ]
-     },
-     "execution_count": 299,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = df.loc[(df['Make'] == 'TESLA') & (df['City'] == 'Seattle')]\n",
     "pc_98104 = df.loc[df['Postal Code'] == 98104.0].shape[0]\n",
     "pc_98134 = df.loc[df['Postal Code'] == 98134.0].shape[0]\n",
-    "pc_98144 = df.loc[df['Postal Code'] == 98144.0].shape[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 221,
-   "id": "b038a761-d9f6-429f-b427-8622454c3783",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "location = df['Vehicle Location'].tolist()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 222,
-   "id": "2f4df60e-a15f-4d5d-acbf-918d5f73a8c8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def coordinates(coords_list):\n",
-    "    lat1 = []\n",
-    "    lon1 = []\n",
-    "    for coords in coords_list:\n",
-    "        s = coords.replace('POINT ', '').strip('()')\n",
-    "        parts = s.split()\n",
-    "        lat1.append(float(parts[1]))\n",
-    "        lon1.append(float(parts[0]))\n",
-    "    return lat1, lon1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 277,
-   "id": "7da3e98e-49ad-411b-8ba4-760f776ef1e6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lat1 = [47.6018, 47.57981, 47.581975]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 278,
-   "id": "116cbc53-b57f-40b8-8c9e-5cf4082901d7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "pc_98144 = df.loc[df['Postal Code'] == 98144.0].shape[0]\n",
+    "lat1 = [47.6018, 47.57981, 47.581975]\n",
     "lon1 = [-122.329075, -122.329815, -122.30823]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 4,
+   "id": "2f4df60e-a15f-4d5d-acbf-918d5f73a8c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# location = df['Vehicle Location'].tolist()\n",
+    "# def coordinates(coords_list):\n",
+    "#     lat1 = []\n",
+    "#     lon1 = []\n",
+    "#     for coords in coords_list:\n",
+    "#         s = coords.replace('POINT ', '').strip('()')\n",
+    "#         parts = s.split()\n",
+    "#         lat1.append(float(parts[1]))\n",
+    "#         lon1.append(float(parts[0]))\n",
+    "#     return lat1, lon1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "8a45ce9b-462c-4124-aac5-77f47058ae3f",
    "metadata": {},
    "outputs": [
@@ -144,7 +108,7 @@
        "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
        "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
        "            &lt;style&gt;\n",
-       "                #map_50c83bd1afa55e899b5b8bcd2f78be32 {\n",
+       "                #map_3467d79019d439a549728457a843bfba {\n",
        "                    position: relative;\n",
        "                    width: 100.0%;\n",
        "                    height: 100.0%;\n",
@@ -159,14 +123,14 @@
        "&lt;body&gt;\n",
        "    \n",
        "    \n",
-       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_50c83bd1afa55e899b5b8bcd2f78be32&quot; &gt;&lt;/div&gt;\n",
+       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_3467d79019d439a549728457a843bfba&quot; &gt;&lt;/div&gt;\n",
        "        \n",
        "&lt;/body&gt;\n",
        "&lt;script&gt;\n",
        "    \n",
        "    \n",
-       "            var map_50c83bd1afa55e899b5b8bcd2f78be32 = L.map(\n",
-       "                &quot;map_50c83bd1afa55e899b5b8bcd2f78be32&quot;,\n",
+       "            var map_3467d79019d439a549728457a843bfba = L.map(\n",
+       "                &quot;map_3467d79019d439a549728457a843bfba&quot;,\n",
        "                {\n",
        "                    center: [47.608013, -122.335167],\n",
        "                    crs: L.CRS.EPSG3857,\n",
@@ -180,37 +144,36 @@
        "\n",
        "        \n",
        "    \n",
-       "            var tile_layer_652c5fcddb69c9c0ac32cad1ca686099 = L.tileLayer(\n",
+       "            var tile_layer_61a78d23f915fcd7976090be1a4e9c2c = L.tileLayer(\n",
        "                &quot;https://tile.openstreetmap.org/{z}/{x}/{y}.png&quot;,\n",
        "                {&quot;attribution&quot;: &quot;\\u0026copy; \\u003ca href=\\&quot;https://www.openstreetmap.org/copyright\\&quot;\\u003eOpenStreetMap\\u003c/a\\u003e contributors&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 19, &quot;maxZoom&quot;: 19, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
        "            );\n",
        "        \n",
        "    \n",
-       "            tile_layer_652c5fcddb69c9c0ac32cad1ca686099.addTo(map_50c83bd1afa55e899b5b8bcd2f78be32);\n",
+       "            tile_layer_61a78d23f915fcd7976090be1a4e9c2c.addTo(map_3467d79019d439a549728457a843bfba);\n",
        "        \n",
        "    \n",
-       "            var heat_map_c3aae60210cdd9156d38d78d1979dcbe = L.heatLayer(\n",
+       "            var heat_map_8a11f5e9d8c0e443ce575d5b922b2228 = L.heatLayer(\n",
        "                [[47.6018, -122.329075], [47.57981, -122.329815], [47.581975, -122.30823]],\n",
        "                {&quot;blur&quot;: 15, &quot;maxZoom&quot;: 18, &quot;minOpacity&quot;: 0.5, &quot;radius&quot;: 25}\n",
        "            );\n",
        "        \n",
        "    \n",
-       "            heat_map_c3aae60210cdd9156d38d78d1979dcbe.addTo(map_50c83bd1afa55e899b5b8bcd2f78be32);\n",
+       "            heat_map_8a11f5e9d8c0e443ce575d5b922b2228.addTo(map_3467d79019d439a549728457a843bfba);\n",
        "        \n",
        "&lt;/script&gt;\n",
        "&lt;/html&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
       ],
       "text/plain": [
-       "<folium.folium.Map at 0x28d8c6fd0>"
+       "<folium.folium.Map at 0x11d60f1c0>"
       ]
      },
-     "execution_count": 279,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from folium.plugins import HeatMap\n",
     "map_object = folium.Map(location = [47.608013, -122.335167], zoom_start = 11 )\n",
     "lat_lon = list(zip(lat1, lon1))\n",
     "HeatMap(lat_lon).add_to(map_object)\n",
@@ -219,17 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
-   "id": "db14b58a-8d4f-4dea-8662-b279bb8c6252",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "m = Model(\"ev_charging\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 6,
    "id": "bcaf1ea0-e119-4a8e-ab1b-ae318c6ef4fc",
    "metadata": {},
    "outputs": [],
@@ -239,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 7,
    "id": "b0984c73-32b5-42fd-a355-2eaaa2d46d48",
    "metadata": {},
    "outputs": [],
@@ -252,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 8,
    "id": "eb8174f2-b337-440f-a056-ac6e8b4a0992",
    "metadata": {},
    "outputs": [
@@ -961,7 +914,7 @@
        "1885      2  "
       ]
      },
-     "execution_count": 303,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -972,32 +925,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 9,
    "id": "58bbc082-9f2e-4c96-871a-979f0bc328fc",
    "metadata": {},
    "outputs": [],
    "source": [
     "def haversine(lat1, lon1, lat2, lon2):\n",
     "    R = 6371.0\n",
-    "    \n",
     "    lat1_rad = math.radians(lat1)\n",
     "    lon1_rad = math.radians(lon1)\n",
     "    lat2_rad = math.radians(lat2)\n",
     "    lon2_rad = math.radians(lon2)\n",
-    "    \n",
     "    dlat = lat2_rad - lat1_rad\n",
     "    dlon = lon2_rad - lon1_rad\n",
-    "\n",
     "    a = math.sin(dlat / 2)**2 + math.cos(lat1_rad) * math.cos(lat2_rad) * math.sin(dlon / 2)**2\n",
     "    c = 2 * math.atan2(math.sqrt(a), math.sqrt(1 - a))\n",
     "    distance = R * c\n",
-    "    \n",
     "    return distance"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 10,
    "id": "1bc8962d-010a-49ae-b2ad-53425e813a70",
    "metadata": {},
    "outputs": [],
@@ -1008,41 +957,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 11,
    "id": "47894754-47e3-457c-ac33-eec5a0f92caa",
    "metadata": {},
    "outputs": [],
    "source": [
     "PC = np.array(['98104','98134','98144']) #list of postal codes\n",
+    "j_id = dfcs['Station_Name'].tolist()\n",
     "EV = np.array([pc_98104, pc_98134, pc_98144])\n",
     "Capacity = np.array(dfcs['Plugs'].tolist())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
-   "id": "87f28a18-ebd5-46e3-a82c-39b1898f7b04",
+   "execution_count": 12,
+   "id": "11846ba3-8992-4146-a7e6-669bb9d9482f",
    "metadata": {},
    "outputs": [],
    "source": [
     "locations = np.array([\n",
     "    [47.6018, -122.329075],\n",
     "    [47.57981, -122.329815],\n",
-    "    [47.581975, -122.30823]   \n",
-    "])\n",
-    "\n",
-    "stations = np.array([[lat, lon] for lat, lon in zip(lat2, lon2)])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 349,
-   "id": "11846ba3-8992-4146-a7e6-669bb9d9482f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    [47.581975, -122.30823]])\n",
+    "stations = np.array([[lat, lon] for lat, lon in zip(lat2, lon2)])\n",
     "d_ij = np.zeros((len(PC), len(Capacity)))\n",
-    "\n",
     "for i, loc in enumerate(locations):\n",
     "    for j, stat in enumerate(stations):\n",
     "        d_ij[i, j] = haversine(loc[1], loc[0], stat[1], stat[0])"
@@ -1050,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 13,
    "id": "06b016ba-4704-4ea5-b41f-0e846a2be7f7",
    "metadata": {},
    "outputs": [
@@ -1058,35 +996,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Set parameter Username\n",
+      "Academic license - for non-commercial use only - expires 2024-09-17\n",
       "Gurobi Optimizer version 10.0.3 build v10.0.3rc0 (mac64[arm])\n",
       "\n",
       "CPU model: Apple M2\n",
       "Thread count: 8 physical cores, 8 logical processors, using up to 8 threads\n",
       "\n",
-      "Optimize a model with 376 rows, 1848 columns and 2112 nonzeros\n",
-      "Model fingerprint: 0x71bb4b57\n",
-      "Variable types: 0 continuous, 1848 integer (1848 binary)\n",
+      "Optimize a model with 47 rows, 132 columns and 264 nonzeros\n",
+      "Model fingerprint: 0x8f866127\n",
+      "Variable types: 0 continuous, 132 integer (132 binary)\n",
       "Coefficient statistics:\n",
-      "  Matrix range     [1e+00, 4e+02]\n",
+      "  Matrix range     [1e+00, 1e+00]\n",
       "  Objective range  [2e-01, 4e+00]\n",
       "  Bounds range     [1e+00, 1e+00]\n",
-      "  RHS range        [1e+00, 4e+02]\n",
-      "Presolve removed 102 rows and 1056 columns\n",
+      "  RHS range        [1e+00, 6e+00]\n",
+      "Found heuristic solution: objective 5.2481298\n",
+      "Presolve removed 47 rows and 132 columns\n",
       "Presolve time: 0.00s\n",
+      "Presolve: All rows and columns removed\n",
       "\n",
-      "Explored 0 nodes (0 simplex iterations) in 0.00 seconds (0.00 work units)\n",
+      "Explored 0 nodes (0 simplex iterations) in 0.01 seconds (0.00 work units)\n",
       "Thread count was 1 (of 8 available processors)\n",
       "\n",
-      "Solution count 0\n",
+      "Solution count 2: 1.17295 5.24813 \n",
       "\n",
-      "Model is infeasible\n",
-      "Best objective -, best bound -, gap -\n"
+      "Optimal solution found (tolerance 1.00e-04)\n",
+      "Best objective 1.172947689933e+00, best bound 1.172947689933e+00, gap 0.0000%\n",
+      "Assignment of postal codes to charging stations: {(0, 36): 1.0, (1, 11): 1.0, (2, 7): 1.0}\n"
      ]
     }
    ],
    "source": [
-    "# Assume d_ij, EV, and Capacity are numpy arrays or similar data structures containing\n",
-    "# distances, number of EVs per postal code, and capacity of each station, respectively.\n",
+    "m = Model(\"ev_charging\")\n",
     "\n",
     "I = range(len(EV))  # Postal codes\n",
     "J = range(len(Capacity))  # Charging stations\n",
@@ -1096,18 +1038,18 @@
     "    for j in J:\n",
     "        x[i,j] = m.addVar(vtype = GRB.BINARY, name = f\"x_{i}{j}\")\n",
     "\n",
-    "m.setObjective(sum(d_ij[i,j] * x[i, j] for i in I for j in J), GRB.MINIMIZE)\n",
+    "m.setObjective(quicksum(d_ij[i,j] * x[i, j] for i in range(len(EV)) for j in range(len(Capacity))), GRB.MINIMIZE)\n",
     "\n",
     "for j in J:\n",
-    "    m.addConstr(sum(x[i,j] for i in I) <= Capacity[j])\n",
+    "    m.addConstr(quicksum(x[i,j] for i in I) <= Capacity[j])\n",
     "\n",
     "for i in I:\n",
-    "    m.addConstr(sum(x[i,j] for j in J) == EV[i])\n",
+    "    m.addConstr(quicksum(x[i,j] for j in J) == 1)\n",
     "\n",
     "m.optimize()\n",
     "\n",
-    "# solution = {(i, j): x[i, j].X for i in I for j in J if x[i, j].X > 0.5}\n",
-    "# print(\"Assignment of postal codes to charging stations:\", solution)"
+    "solution = {(i, j): x[i, j].X for i in I for j in J if x[i, j].X > 0.5}\n",
+    "print(\"Assignment of postal codes to charging stations:\", solution)"
    ]
   },
   {
@@ -1130,7 +1072,7 @@
     "\n",
     "# Let's print the first 10 to see the example output\n",
     "for car, address in list(cars_addresses.items())[:10]:\n",
-    "    print(f\"{car} is assigned to {address}\")\n"
+    "    print(f\"{car} is assigned to {address}\")"
    ]
   }
  ],
