--- a/ev.ipynb
+++ b/ev.ipynb
@@ -22,10 +22,7 @@
     "import numpy as np\n",
     "import folium\n",
     "import math\n",
-    "from folium.plugins import HeatMap\n",
-    "\n",
-    "# from geopy.geocoders import Nominatim\n",
-    "# import matplotlib.pyplot as plt"
+    "from folium.plugins import HeatMap"
    ]
   },
   {
@@ -988,7 +985,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
+   "id": "6b10a2b1-e840-4ca7-80b3-a6997e52016c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "117"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "EV[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "4791399c-d8c8-4b28-b0ec-77b712785b78",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "279"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "EV[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "96dfc590-ec0f-479b-bae7-8a6c30c6132a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "421"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "EV[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "id": "06b016ba-4704-4ea5-b41f-0e846a2be7f7",
    "metadata": {},
    "outputs": [
@@ -996,34 +1056,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2024-09-17\n",
       "Gurobi Optimizer version 10.0.3 build v10.0.3rc0 (mac64[arm])\n",
       "\n",
       "CPU model: Apple M2\n",
       "Thread count: 8 physical cores, 8 logical processors, using up to 8 threads\n",
       "\n",
       "Optimize a model with 47 rows, 132 columns and 264 nonzeros\n",
-      "Model fingerprint: 0x8f866127\n",
+      "Model fingerprint: 0xdb4ffb12\n",
       "Variable types: 0 continuous, 132 integer (132 binary)\n",
       "Coefficient statistics:\n",
       "  Matrix range     [1e+00, 1e+00]\n",
       "  Objective range  [2e-01, 4e+00]\n",
       "  Bounds range     [1e+00, 1e+00]\n",
-      "  RHS range        [1e+00, 6e+00]\n",
-      "Found heuristic solution: objective 5.2481298\n",
-      "Presolve removed 47 rows and 132 columns\n",
+      "  RHS range        [1e+00, 2e+01]\n",
+      "Found heuristic solution: objective 89.6319375\n",
+      "Presolve removed 4 rows and 0 columns\n",
       "Presolve time: 0.00s\n",
-      "Presolve: All rows and columns removed\n",
+      "Presolved: 43 rows, 132 columns, 252 nonzeros\n",
+      "Variable types: 0 continuous, 132 integer (132 binary)\n",
+      "Found heuristic solution: objective 83.0148270\n",
       "\n",
-      "Explored 0 nodes (0 simplex iterations) in 0.01 seconds (0.00 work units)\n",
-      "Thread count was 1 (of 8 available processors)\n",
+      "Root relaxation: objective 7.405640e+01, 54 iterations, 0.00 seconds (0.00 work units)\n",
       "\n",
-      "Solution count 2: 1.17295 5.24813 \n",
+      "    Nodes    |    Current Node    |     Objective Bounds      |     Work\n",
+      " Expl Unexpl |  Obj  Depth IntInf | Incumbent    BestBd   Gap | It/Node Time\n",
+      "\n",
+      "*    0     0               0      74.0564000   74.05640  0.00%     -    0s\n",
+      "\n",
+      "Explored 1 nodes (54 simplex iterations) in 0.02 seconds (0.00 work units)\n",
+      "Thread count was 8 (of 8 available processors)\n",
+      "\n",
+      "Solution count 3: 74.0564 83.0148 89.6319 \n",
       "\n",
       "Optimal solution found (tolerance 1.00e-04)\n",
-      "Best objective 1.172947689933e+00, best bound 1.172947689933e+00, gap 0.0000%\n",
-      "Assignment of postal codes to charging stations: {(0, 36): 1.0, (1, 11): 1.0, (2, 7): 1.0}\n"
+      "Best objective 7.405639996860e+01, best bound 7.405639996860e+01, gap 0.0000%\n",
+      "Assignment of postal codes to charging stations: {(0, 0): 1.0, (0, 1): 1.0, (0, 2): 1.0, (0, 3): 1.0, (0, 6): 1.0, (0, 10): 1.0, (0, 12): 1.0, (0, 13): 1.0, (0, 14): 1.0, (0, 15): 1.0, (0, 16): 1.0, (0, 17): 1.0, (0, 18): 1.0, (0, 19): 1.0, (0, 26): 1.0, (0, 27): 1.0, (0, 28): 1.0, (0, 29): 1.0, (0, 30): 1.0, (0, 38): 1.0, (1, 0): 1.0, (1, 7): 1.0, (1, 8): 1.0, (1, 9): 1.0, (1, 10): 1.0, (1, 11): 1.0, (1, 20): 1.0, (1, 21): 1.0, (1, 22): 1.0, (1, 23): 1.0, (1, 24): 1.0, (1, 25): 1.0, (1, 28): 1.0, (1, 29): 1.0, (1, 30): 1.0, (1, 37): 1.0, (1, 39): 1.0, (1, 40): 1.0, (1, 41): 1.0, (1, 42): 1.0, (2, 0): 1.0, (2, 2): 1.0, (2, 3): 1.0, (2, 4): 1.0, (2, 5): 1.0, (2, 7): 1.0, (2, 10): 1.0, (2, 11): 1.0, (2, 12): 1.0, (2, 13): 1.0, (2, 14): 1.0, (2, 27): 1.0, (2, 31): 1.0, (2, 32): 1.0, (2, 33): 1.0, (2, 34): 1.0, (2, 35): 1.0, (2, 36): 1.0, (2, 37): 1.0, (2, 43): 1.0}\n"
      ]
     }
    ],
@@ -1036,15 +1103,15 @@
     "x = {}\n",
     "for i in I:\n",
     "    for j in J:\n",
-    "        x[i,j] = m.addVar(vtype = GRB.BINARY, name = f\"x_{i}{j}\")\n",
+    "        x[i,j] = m.addVar(vtype=GRB.BINARY, name = f\"x_{i}{j}\", lb=0)\n",
     "\n",
-    "m.setObjective(quicksum(d_ij[i,j] * x[i, j] for i in range(len(EV)) for j in range(len(Capacity))), GRB.MINIMIZE)\n",
+    "m.setObjective(quicksum(d_ij[i,j] * x[i, j] for i in I for j in J), GRB.MINIMIZE)\n",
     "\n",
     "for j in J:\n",
     "    m.addConstr(quicksum(x[i,j] for i in I) <= Capacity[j])\n",
     "\n",
     "for i in I:\n",
-    "    m.addConstr(quicksum(x[i,j] for j in J) == 1)\n",
+    "    m.addConstr(quicksum(x[i,j] for j in J) == 20, f\"EV_Assignment_{i}\")\n",
     "\n",
     "m.optimize()\n",
     "\n",
